--- a/events/templates/events/all_events.html
+++ b/events/templates/events/all_events.html
@@ -4,29 +4,57 @@
 {% block extra_title %}- chatrooms{% endblock %}
 
 {% block content %}
-<h1>All events</h1>
 <div class="container">
     <div class="row">
+        <div class="col-12 my-4">
+            <h1 class="text-center my-3">All events</h1>
+            <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#event-modal">
+                Add an event <i class="fa-solid fa-plus pl-1"></i>
+            </button>
+        </div>
+    </div>
+    <div class="row">
         {% for event in events %}
-        <div class="col">
-            {{ event.event_name }}
-            {{ event.date }}
-            {{ event.location }}
-            {% if event.image %}
-                <img src="{{ event.image.url }}" alt="img">
-            {% endif %}
+        <div class="col-lg-3 mx-1">
+            <div class="card" style="width: 18rem;">
+                {% if event.image %}
+                <img class="card-img-top" src="{{ event.image.url }}" alt="Card image cap">
+                {% endif %}
+                <div class="card-body">
+                    <h5 class="card-title">{{ event.event_name }}</h5>
+                    <p class="card-text text-info">{{ event.date }}</p>
+                    <p class="card-text">{{ event.location }}</p>
+                    <a href="#" class="btn btn-primary">Event Details</a>
+                </div>
+            </div>
         </div>
         {% endfor %}
     </div>
 
     <div class="row">
         <div class="col">
-            <h3>Add new event</h3>
-            <form action="{% url 'all_events' %}" method="POST" enctype="multipart/form-data">
-                {% csrf_token %}
-                {{ form|crispy }}
-                <button class="btn btn-success" type="submit">Submit</button>
-            </form>
+            <div class="modal" tabindex="-1" role="dialog" id="event-modal">
+                <div class="modal-dialog" role="document">
+                  <div class="modal-content">
+                    <div class="modal-header">
+                      <h5 class="modal-title">Add a new event</h5>
+                      <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                      </button>
+                    </div>
+                    <div class="modal-body">
+                        <form action="{% url 'all_events' %}" method="POST" enctype="multipart/form-data">
+                            {% csrf_token %}
+                            {{ form|crispy }}
+                        </div>
+                        <div class="modal-footer">
+                            <button type="submit" class="btn btn-primary">Submit</button>
+                            <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
+                        </div>
+                    </form>
+                  </div>
+                </div>
+              </div>
         </div>
     </div>
 </div>
