Add style to profile page

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -372,8 +372,8 @@ event-title {
 
 .edit-profile-btn {
     position: absolute;
+    right: 0;
     top: -12px;
-    right: -12px;
 }
 
 /* image select button */
