--- a/profiles/templates/profiles/profile.html
+++ b/profiles/templates/profiles/profile.html
@@ -10,7 +10,7 @@
                 <h2 class="text-center mx-auto mb-5">{{ request.user.username }}'s profile</h2>
             </div>
         </div>
-        <div class="row">
+        <div class="row align-items-center position-relative">
             <div class="col text-right mr-md-5">
                 <!-- Profile image -->
                 {% if user_profile.image %}
@@ -22,12 +22,16 @@
                 {% endif %}
                 <!-- Make profile public trigger input -->
                 <form>
-                    <div class="ml-4">
+                    <div class="ml-md-4">
                         <input class="form-check-input" type="checkbox" id="make-profile-public-chekbox" name="make-profile-public-chekbox"
                         data-toggle="modal" data-target="#make-profile-public-modal"
                         {% if user_profile.make_public %} checked{% endif %}>
                         <label class="form-check-label" for="make-profile-public-chekbox">
-                            make profile public
+                            {% if user_profile.make_public %}
+                                <small>make profile public</small>
+                            {% else %}
+                                <small>make profile private</small>
+                            {% endif %}
                         </label>
                     </div>
                 </form>
@@ -61,59 +65,69 @@
                         </div>
                     </div>
                 </div>
-                <!-- Button trigger edit profile modal -->
-                <button type="button" class="btn edit-profile-btn" data-toggle="modal" data-target="#edit-profile-modal" title="Edit profile">
-                    <i class="fa-regular fa-pen-to-square"></i>
-                    <span class="sr-only">Edit your profile information</span>
-                </button>
-                <!-- Edit profile modal -->
-                <div class="modal fade" id="edit-profile-modal" data-backdrop="static" data-keyboard="false" tabindex="-1"
-                aria-labelledby="edit-profile-modal-label" aria-hidden="true">
-                    <div class="modal-dialog modal-dialog-centered">
-                        <div class="modal-content">
-                            <div class="modal-header">
-                                <h5 class="modal-title" id="edit-profile-modal-label">Edit your profile</h5>
-                                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                                    <span aria-hidden="true">&times;</span>
-                                </button>
-                            </div>
-                            <form action="{% url 'profile' %}" method="POST" enctype="multipart/form-data">
-                                <div class="modal-body text-left">
-                                    {% csrf_token %}
-                                    <input class="form-control mb-2" type="text" id="username" name="username" placeholder="Username"
-                                    value="{{ request.user.username }}">
-                                    <input class="form-control mb-2" type="text" id="email" name="email" placeholder="Email"
-                                    value="{{ request.user.email }}">
-                                    {% for field in profile_form %}
-                                        <!-- display field as crispy except for the custom widget for image  -->
-                                        {% if field.name != 'image' %}
-                                            {{ field | as_crispy_field }}
-                                        {% else %}
-                                            {{ field }}
-                                        {% endif %}
-                                    {% endfor %}
-                                </div>
-                                <div class="modal-footer">
-                                    <button type="button" class="btn btn-danger" data-dismiss="modal">Cancel</button>
-                                    <button type="submit" class="btn btn-primary">Update profile</button>
-                                </div>
-                            </form>
-                        </div>
-                    </div>
-                </div>
             </div>
             <!-- Profile information -->
-            <div class="col pl-0">
-                <p class="mb-1"><span class="text-muted">Username: </span>{{ request.user.username}}</p>
-                <p class="mb-2"><span class="text-muted">Email: </span>{{ request.user.email}}</p>
-                <p>
-                    <span class="text-muted">About me:</span><br/>
+            <div class="col pl-1 align-middle">
+                <p class="mb-1"><span class="text-muted small">Username: </span>{{ request.user.username}}</p>
+                <p class="mb-2"><span class="text-muted small">Email: </span>{{ request.user.email}}</p>
+                <p class="d-none d-md-block">
+                    <span class="text-muted small">About me:</span><br/>
                     {% if user_profile.about %}
                         {{ user_profile.about }}
                     {% else %}
                         <span class="ml-2">Tell us who you are ...</span>
                     {% endif %}
                 </p>
+            </div>
+            <div class="col-12 d-block d-md-none mt-3">
+                <p>
+                    <span class="text-muted small">About me:</span><br/>
+                    {% if user_profile.about %}
+                        {{ user_profile.about }}
+                    {% else %}
+                        <span class="ml-2">Tell us who you are ...</span>
+                    {% endif %}
+                </p>
+            </div>
+            <!-- Button trigger edit profile modal -->
+            <button type="button" class="btn edit-profile-btn mr-md-2" data-toggle="modal" data-target="#edit-profile-modal" title="Edit profile">
+                <i class="fa-regular fa-pen-to-square"></i>
+                <span class="sr-only">Edit your profile information</span>
+            </button>
+            <!-- Edit profile modal -->
+            <div class="modal fade" id="edit-profile-modal" data-backdrop="static" data-keyboard="false" tabindex="-1"
+            aria-labelledby="edit-profile-modal-label" aria-hidden="true">
+                <div class="modal-dialog modal-dialog-centered">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <h5 class="modal-title" id="edit-profile-modal-label">Edit your profile</h5>
+                            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                <span aria-hidden="true">&times;</span>
+                            </button>
+                        </div>
+                        <form action="{% url 'profile' %}" method="POST" enctype="multipart/form-data">
+                            <div class="modal-body text-left">
+                                {% csrf_token %}
+                                <input class="form-control mb-2" type="text" id="username" name="username" placeholder="Username"
+                                value="{{ request.user.username }}">
+                                <input class="form-control mb-2" type="text" id="email" name="email" placeholder="Email"
+                                value="{{ request.user.email }}">
+                                {% for field in profile_form %}
+                                    <!-- display field as crispy except for the custom widget for image  -->
+                                    {% if field.name != 'image' %}
+                                        {{ field | as_crispy_field }}
+                                    {% else %}
+                                        {{ field }}
+                                    {% endif %}
+                                {% endfor %}
+                            </div>
+                            <div class="modal-footer">
+                                <button type="button" class="btn btn-danger" data-dismiss="modal">Cancel</button>
+                                <button type="submit" class="btn btn-primary">Update profile</button>
+                            </div>
+                        </form>
+                    </div>
+                </div>
             </div>
         </div>
         <div class="row">
