Add favorites display logic in chatrooms views

--- a/chatrooms/templates/chatrooms/chatroom_detail.html
+++ b/chatrooms/templates/chatrooms/chatroom_detail.html
@@ -30,6 +30,8 @@
                     </div>
                 </div>
             </div>
+            <!-- Just testing, will work on display soon ;) -->
+            {{ favorites_comments }}
         {% else %}
             <p class="text-center mx-auto py-3 mt-5">
                 Please <a class="text-info" href="{% url 'account_login' %}" aria-label="Link to log in page.">Sign in</a> or
